samples/_failures_safe/1761200381_02bab8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_078c498f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_078c498f.c:160:5: error: expected expression at end of input
  160 |     if (token_count < max_tokens)
      |     ^~
./samples/SAFE/__tmp_078c498f.c:160:5: error: expected declaration or statement at end of input
